--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,18 +21,23 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_key"/>
         <activity
-            android:name=".MainActivity"
+            android:name=".Activities.MainActivity"
             android:screenOrientation="portrait"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ViewLocation"
+        <activity android:name=".Activities.ViewLocation"
             android:screenOrientation="portrait"/>
-        <activity android:name=".EditLocation"
+        <activity android:name=".Activities.CreateLocation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Activities.CreateUser"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Activities.UserLogin"
             android:screenOrientation="portrait"/>
 
     </application>
