Added share location activity, Able to share location data to firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,8 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".Activities.UserLogin"
             android:screenOrientation="portrait"/>
+        <activity android:name=".Activities.ShareLocation"
+            android:screenOrientation="portrait"/>
 
     </application>
 
