--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/tasla_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <meta-data
@@ -40,6 +40,8 @@
         <activity android:name=".Activities.UserLogin"
             android:screenOrientation="portrait"/>
         <activity android:name=".Activities.ShareLocation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Activities.ViewSharedLocation"
             android:screenOrientation="portrait"/>
 
     </application>
